--- a/version/index.html
+++ b/version/index.html
@@ -45,7 +45,7 @@
 
 <body>
     <div class="image">
-        <img src="URL_OF_YOUR_IMAGE" alt="Description of the Image">
+        <img src="https://png.pngtree.com/png-clipart/20230225/ourmid/pngtree-ace-of-spades-png-image_6615752.png" alt="Image">
     </div>
     <div class="main-text">
         <h3 id="main-text">Site Defaced Using "ACE-Deface"</h3>
