--- a/version/index.html
+++ b/version/index.html
@@ -51,10 +51,10 @@
         <h3 id="main-text">Site Defaced Using "ACE-Deface"</h3>
     </div>
     <div class="second-text">
-        <h5 id="second-text">This was done using a Vulnerability in your site.</h5>
+        <h5 id="second-text"> </h5>
     </div>
     <div class="third-text">
-        <h5 id="third-text">Goodbye</h5>
+        <h5 id="third-text">This was done using a Vulnerability in your site. FIX IT</h5>
     </div>
 
     <script>
