--- a/version/index.html
+++ b/version/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centered Message with Image</title>
+    <title>Website Defaced</title>
     <style>
         body {
             display: flex;
@@ -13,32 +13,32 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #8b0000; /* Blood Red Background */
+            background-color: #8b0000; 
         }
 
         .image {
-            max-width: 100%; /* Ensure the image doesn't exceed its original size */
+            max-width: 100%; 
         }
 
         .main-text {
             text-align: center;
-            font-size: 36px; /* Larger font size for main text */
-            margin: 10px 0; /* Margin around main text */
+            font-size: 36px; 
+            margin: 10px 0; 
         }
 
         .second-text,
         .third-text {
             text-align: center;
-            font-size: 18px; /* Smaller font size for second and third text */
-            margin-bottom: 10px; /* Margin between texts */
+            font-size: 18px; 
+            margin-bottom: 10px; 
         }
 
         .white-text {
-            color: white; /* White Text Color */
+            color: white; 
         }
 
         .black-text {
-            color: black; /* Black Text Color */
+            color: black; /
         }
     </style>
 </head>
@@ -48,13 +48,13 @@
         <img src="https://png.pngtree.com/png-clipart/20230225/ourmid/pngtree-ace-of-spades-png-image_6615752.png" alt="Image">
     </div>
     <div class="main-text">
-        <h3 id="main-text">Site Defaced Using "ACE-Deface"</h3>
+        <h3 id="main-text">Site Defaced Using "ACE"</h3>
     </div>
     <div class="second-text">
         <h5 id="second-text"> </h5>
     </div>
     <div class="third-text">
-        <h5 id="third-text">This was done using a Vulnerability in your site. FIX IT</h5>
+        <h5 id="third-text">This was done using a Vulnerability in your site.</h5>
     </div>
 
     <script>
@@ -71,7 +71,7 @@
 
             thirdText.classList.toggle("white-text");
             thirdText.classList.toggle("black-text");
-        }, 1000); // Inverts text colors every second
+        }, 1000); 
     </script>
 </body>
 
