--- a/version/index.html
+++ b/version/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Defaced</title>
+    <title>Site Defaced using ACE</title>
     <style>
         body {
             display: flex;
@@ -41,7 +41,7 @@
             alt="Image">
     </div>
     <div class="main-text">
-        <h3 id="main-text">"ACE"</h3>
+        <h3 id="main-text">"Site Defaced"</h3>
     </div>
 
     <script>
