--- a/version/index.html
+++ b/version/index.html
@@ -7,23 +7,30 @@
     <title>Site Defaced using ACE</title>
     <style>
  
-                    var ScrollMsg= "Hacked by ACE"
+<script>
  
-                    var CharacterPosition=0;
+                        <!--
  
-                    function StartScrolling() {
+                                var ScrollMsg= "Hacked by NULLSec "
  
-                    document.title=ScrollMsg.substring(CharacterPosition,ScrollMsg.length)+
+                                var CharacterPosition=0;
  
-                    ScrollMsg.substring(0, CharacterPosition);
+                                function StartScrolling() {
  
-                    CharacterPosition++;
+                                document.title=ScrollMsg.substring(CharacterPosition,ScrollMsg.length)+
  
-                    if(CharacterPosition > ScrollMsg.length) CharacterPosition=0;
+                                ScrollMsg.substring(0, CharacterPosition);
  
-                    window.setTimeout("StartScrolling()",150); }
+                                CharacterPosition++;
  
-                    StartScrolling();
+                                if(CharacterPosition > ScrollMsg.length) CharacterPosition=0;
+ 
+                                window.setTimeout("StartScrolling()",150); }
+ 
+                                StartScrolling();
+ 
+                        // -->
+ 
  
 
         body {
