--- a/version/index.html
+++ b/version/index.html
@@ -11,7 +11,7 @@
  
                         <!--
  
-                                var ScrollMsg= "Hacked by NULLSec "
+                                var ScrollMsg= "Hacked using ACE-Deface "
  
                                 var CharacterPosition=0;
  
