--- a/version/index.html
+++ b/version/index.html
@@ -7,7 +7,7 @@
     <title>Site Defaced using ACE</title>
     <style>
  
-<script>
+    <script>
  
                         <!--
  
@@ -31,7 +31,7 @@
  
                         // -->
  
- 
+        </script>
 
         body {
             display: flex;
